--- a/index.html
+++ b/index.html
@@ -284,33 +284,10 @@
         <source src="https://files.catbox.moe/yizd1x.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-    <button id="navButton"><i class="fas fa-bars"></i> </button>
-    <nav class="sidebar-nav">
-        <ul class="nav flex-column">
-            <li class="nav-item">
-                <a class="nav-link active" href="#">Beranda</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#endpoints">Endpoint Unggulan</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#documentation">Dokumentasi</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#gallery">Galeri</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/kebijakan">Kebijakan</a>
-            </li>
-            <li class="nav-item">
-                <button id="closeNavButton" class="nav-link"><i class="fas fa-times"></i> </button>
-            </li>
-        </ul>
-    </nav>
     <div class="content">
         <div class="jumbotron text-center">
             <h1 class="display-4 animate__animated animate__fadeInDown">WANZOFC TECH API</h1>
-            <p class="lead animate__animated animate__fadeInUp animate__delay-1s">Platform Canggih untuk AI dan Tools</p>
+            <p class="lead animate__animated animate__fadeInUp animate__delay-1s">platform canggih untuk ai dan tools</p>
             <hr class="my-4">
             <p class="animate__animated animate__fadeIn animate__delay-2s">
                 <a href="/api-docs">docs</a>.
@@ -318,20 +295,18 @@
             <a class="btn btn-primary btn-lg animate__animated animate__fadeIn animate__delay-2s"
                 href="/api-docs" role="button"> <i class="fas fa-external-link-alt"></i></a>
         </div>
-
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="card" id="forum-card">
                     <div class="card-body">
                         <div class="forum-header">
                             <div class="forum-header-left">
-                                <img src="https://via.placeholder.com/50" alt="Forum Logo">
+                                <img src="https://files.catbox.moe/nisyfz.png" alt="Forum Logo">
                                 <h5 class="card-title">dukungan</h5>
                             </div>
                             <button id="dark-mode-toggle" class="dark-mode-button">🌙</button>
                         </div>
                         <div id="messages-container">
-                            <!-- Pesan-pesan akan ditampilkan di sini -->
                         </div>
                         <div class="input-group">
                             <input type="text" class="form-control" id="message-input" placeholder="ketik pesan Anda...">
@@ -427,7 +402,7 @@
                 </div>
             </div>
         </div>
-        <h2 class="mt-4 animate__animated animate__fadeIn" id="documentation">Dokumentasi</h2>
+        <h2 class="mt-4 animate__animated animate__fadeIn" id="documentation">dokumentasi</h2>
         <p class="animate__animated animate__fadeInUp">
            <a href="/api-docs">docs</a>.
         </p>
